--- a/package.json
+++ b/package.json
@@ -25,16 +25,20 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/mongoose": "^10.0.1",
     "@nestjs/platform-express": "^10.0.0",
+    "@pusher/push-notifications-server": "^1.2.6",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "dotenv": "^16.3.1",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.4",
+    "pusher": "^5.1.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
+    "uuid": "^9.0.0",
     "web-push": "^3.6.4",
-    "web3": "^4.1.1"
+    "web3": "^4.1.1",
+    "web3-providers-http": "^4.0.5"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
