--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "cron": "^2.4.3",
     "dotenv": "^16.3.1",
+    "ethers": "5.7.2",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.4",
     "pusher": "^5.1.3",
