--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "gaze-backend",
+  "name": "mainframestack",
   "version": "0.0.1",
-  "description": "",
-  "author": "",
+  "description": "<p align=\"center\">\r   <a href=\"http://nestjs.com/\" target=\"blank\"><img src=\"https://nestjs.com/img/logo-small.svg\" width=\"200\" alt=\"Nest Logo\" /></a>\r </p>",
+  "author": "Bunmi",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
@@ -81,5 +81,14 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
-  }
+  },
+  "main": ".eslintrc.js",
+  "directories": {
+    "test": "test"
+  },
+  "repository": "git+https://github.com/6amson/mainframestack.git",
+  "bugs": {
+    "url": "https://github.com/6amson/mainframestack/issues"
+  },
+  "homepage": "https://github.com/6amson/mainframestack#readme"
 }
