--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.2.0",
-    "@nestjs/mongoose": "^10.0.1",
+    "@nestjs/mongoose": "^10.0.4",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.2",
     "@pusher/push-notifications-server": "^1.2.6",
@@ -34,7 +34,7 @@
     "class-validator": "^0.14.0",
     "cron": "^2.4.3",
     "cross-env": "^7.0.3",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.4.5",
     "ethers": "5.7.2",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.4",
@@ -69,6 +69,9 @@
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.1.3"
+  },
+  "engines": {
+    "node": "21.7.1"
   },
   "jest": {
     "moduleFileExtensions": [
