--- a/package.json
+++ b/package.json
@@ -21,31 +21,23 @@
     "test:unit": "jest --config ./jest-unit.json"
   },
   "dependencies": {
-    "@metamask/eth-sig-util": "^6.0.0",
-    "@nestjs/common": "^10.0.0",
+    "@nestjs/common": "^10.3.5",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/mongoose": "^10.0.1",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.2",
-    "@pusher/push-notifications-server": "^1.2.6",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
-    "cron": "^2.4.3",
     "cross-env": "^7.0.3",
-    "dotenv": "^16.3.1",
-    "ethers": "5.7.2",
+    "dotenv": "^16.4.5",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.4",
-    "pusher": "^5.1.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.20",
-    "uuid": "^9.0.0",
-    "web-push": "^3.6.4",
-    "web3": "^4.1.1",
-    "web3-providers-http": "^4.0.5"
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
